<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="101dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="296dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/product1title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product1"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/product1price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product1price" />

                    <TextView
                        android:id="@+id/product1desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product1desc" />

                </LinearLayout>

                <Button
                    android:id="@+id/button1"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:onClick="LinkPress"
                    android:text="@string/buyButton"
                    tools:ignore="HardcodedText" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="101dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="296dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/product2title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product2"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/product2price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product2price" />

                    <TextView
                        android:id="@+id/product2desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product2desc" />

                </LinearLayout>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:onClick="LinkPress"
                    android:text="@string/buyButton"
                    tools:ignore="HardcodedText" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="101dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="296dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/product3title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product3"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/product3price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product3price" />

                    <TextView
                        android:id="@+id/product3desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product3desc" />

                </LinearLayout>

                <Button
                    android:id="@+id/button3"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:onClick="LinkPress"
                    android:text="@string/buyButton"
                    tools:ignore="HardcodedText" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="101dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="296dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/product4title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product4"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/product4price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product4price" />

                    <TextView
                        android:id="@+id/product4desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product4desc" />

                </LinearLayout>

                <Button
                    android:id="@+id/button4"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:onClick="LinkPress"
                    android:text="@string/buyButton"
                    tools:ignore="HardcodedText" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="101dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="296dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/product5title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product5"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/product5price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product5price" />

                    <TextView
                        android:id="@+id/product5desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product5desc" />

                </LinearLayout>

                <Button
                    android:id="@+id/button5"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:onClick="LinkPress"
                    android:text="@string/buyButton"
                    tools:ignore="HardcodedText" />
            </TableRow>

        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>